# OpenFuel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dynamic Indian Fuel Prices Alternatives Explored.md  README.md  ROADMAP.md  main.py  prices.json  project_context.md  pyproject.toml  requirements.txt  verify_structure.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_data_source.yml
.github/workflows/: daily_scrape.yml
src/: scraper.py  utils.py
tests/: test_scraper.py  test_scraper_integration.py  test_utils.py  test_workflow_infra.py
