[project]
name = "openfuel"
version = "0.1.0"
description = "A git-scraping pipeline for daily Indian fuel prices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4~=4.14.3",
    "cloudscraper>=1.2.71",
    "requests~=2.32.5",
    "requests-mock>=1.12.1",
]

[dependency-groups]
dev = [
    "pytest~=9.0.1",
    "pyyaml>=6.0.3",
]
